--- a/src/View/main.fxml
+++ b/src/View/main.fxml
@@ -19,7 +19,7 @@
             </font>
         </Text>
         <TextField fx:id="name1" layoutX="188.0" layoutY="332.0" prefHeight="39.0" prefWidth="224.0" />
-        <Button fx:id="next" layoutX="217.0" layoutY="413.0" mnemonicParsing="false" onAction="#getName" prefHeight="32.0" prefWidth="164.0" text="Continue">
+        <Button fx:id="next" layoutX="217.0" layoutY="413.0" mnemonicParsing="false" onAction="#buttonAction" prefHeight="32.0" prefWidth="164.0" text="Continue">
             <font>
                 <Font size="18.0" />
             </font>
