--- a/src/View/questions.fxml
+++ b/src/View/questions.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="950.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.questionController">
+<AnchorPane prefHeight="950.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.QuestionController">
    <children>
       <Text layoutX="105.0" layoutY="269.0" strokeType="OUTSIDE" strokeWidth="0.0" text="&gt;Age" wrappingWidth="101.13671875">
          <font>
